--- a/especialistas-web/src/main/webapp/src/index.css
+++ b/especialistas-web/src/main/webapp/src/index.css
@@ -26,12 +26,14 @@ and open the template in the editor.
     height:  100% !important;
     padding-top: 15px;
     margin: 0px;
+    width:250px;
 }
 
 #barra-lateral{
     position: fixed;
     height: calc( 100% - 60px );
     background: #2E3840;
+    width: 250px;
     top: 60px;
     left: 0px;
     padding: 0px;
@@ -129,3 +131,4 @@ and open the template in the editor.
 .img-responsive{
 
 }
+
