--- a/especialistas-web/src/main/webapp/src/index.css
+++ b/especialistas-web/src/main/webapp/src/index.css
@@ -121,3 +121,21 @@ and open the template in the editor.
             .img-responsive{
                 
             }
+            
+        #map_canvas {
+            height: 70%;
+            width: 70%;
+            margin: 0px;
+        }
+
+        #map_canvas {
+            position: relative;
+        }
+
+        .angular-google-map-container {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+        }
