--- a/especialistas-web/src/main/webapp/src/index2.css
+++ b/especialistas-web/src/main/webapp/src/index2.css
@@ -156,3 +156,7 @@ and open the template in the editor.
             .olp{
                 height: fit-content;
             }
+            
+            table{
+                border-radius: 10px;
+            }
