--- a/especialistas-web/src/main/webapp/src/index2.css
+++ b/especialistas-web/src/main/webapp/src/index2.css
@@ -187,3 +187,26 @@ and open the template in the editor.
                 text-align: left;
                 color: #fff;
             }
+
+            .log{
+                position: fixed;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background: #fff;
+                z-index: 999;
+            }
+
+            .log .img{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0px;
+                left: 0px;
+                background-image: url(fondo2.jpg);
+                filter: blur(8px);
+            }
